problem.txt
sjoerd@Xeon-L5410:~/Coding/Languages/Evi-Lang $ cat bin/test.ll 
; ModuleID = 'top'
source_filename = "test/test.evi"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

@mystr = common global i8* null
@llvm.global_ctors = appending global [1 x { i32, void ()*, i8* }] [{ i32, void ()*, i8* } { i32 0, void ()* @_global_var_init, i8* null }]
@.str = private unnamed_addr constant [4 x i8] c"yo\0A\00", align 1

declare i8 @prints(i8*)

define void @_global_var_init() {
entry:
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i32 0, i32 0), i8** @mystr, align 8
  ret void
}

define i64 @main() {
entry:
  %calltmp = call i8 @prints(i8* bitcast ([14 x i8] c"Hello World!\0A\00" to i8*))
  %loadtmp = load i8*, i8** @mystr, align 8
  %calltmp1 = call i8 @prints(i8* %loadtmp)
  ret i64 0
}
sjoerd@Xeon-L5410:~/Coding/Languages/Evi-Lang $ llc-12 bin/test.ll -o bin/test.o
llc-12: error: llc-12: bin/test.ll:20:34: error: invalid cast opcode for cast from '[14 x i8]' to 'i8*'
  %calltmp = call i8 @prints(i8* bitcast ([14 x i8] c"Hello World!\0A\00" to i8*))
                                 ^
